2011-01-28  Ian Lance Taylor  <iant@google.com>

	* godump.c (go_define): Ignore macros whose definitions include
	two adjacent operands.

2011-01-28  Jakub Jelinek  <jakub@redhat.com>

	PR target/42894
	* varasm.c (force_const_mem): Store copy of x in desc->constant
	instead of x itself.
	* expr.c (emit_move_insn): Add a copy of y_cst instead of y_cst
	itself into REG_EQUAL note.

2011-01-28  Joseph Myers  <joseph@codesourcery.com>

	* config/freebsd.opt (posix, rdynamic): New Driver options.

2011-01-28  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* configure.ac (gcc_cv_ld_static_dynamic): IRIX 6 ld supports
	-Bstatic/-Bdynamic.
	* configure: Regenerate.

2011-01-27  Joseph Myers  <joseph@codesourcery.com>

	* config/rs6000/sysv4.h (LIB_NETBSD_SPEC): Don't handle -profile.
	* config/rs6000/vxworks.h (CC1_SPEC): Don't handle -profile.

2011-01-27  Anatoly Sokolov  <aesok@post.ru>

	* config/s390/s390.h (PREFERRED_RELOAD_CLASS): Remove.
	* config/s390/s390-protos.h (s390_preferred_reload_class): Remove.
	* config/s390/s390.c (TARGET_PREFERRED_RELOAD_CLASS): Define.
	(s390_preferred_reload_class): Make static. Change return and
	'rclass' argument type to reg_class_t.

2011-01-27  Jan Hubicka  <jh@suse.cz>

	PR middle-end/46949
	* cgraphunit.c (process_common_attributes): Fix use of remove_attribute.
	(process_function_and_variable_attributes): Check defined weakrefs.

2011-01-27  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/47228
	* tree-sra.c (sra_modify_assign): Use build_ref_for_model instead of
	build_ref_for_offset.

2011-01-27  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* config/spu/spu-elf.h (ASM_SPEC): Remove.

2011-01-26  Mikael Pettersson <mikpe@it.uu.se>

	PR rtl-optimization/46856
	* postreload.c (reload_combine_recognize_const_pattern): Do not
	separate cc0 setter and user on cc0 targets.

2011-01-26  Nicola Pero  <nicola.pero@meta-innovation.com>

	PR c/43082
	* c-typeck.c (c_objc_common_truthvalue_conversion): If we are